@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=org.gnome.Empathy.Chat
-Exec=@bindir@/empathy
+Exec=@libexecdir@/empathy-chat-chandler
